[tool.poetry]
name = "prismedia"
version = "0.9.1"
description = "scripting your way to upload videos on peertube and youtube"
authors = [
  "LecygneNoir <git@lecygnenoir.info>",
  "Rigel Kent <sendmemail@rigelk.eu>",
  "Zykino"
]

license = "AGPL-3.0-only"

readme = 'README.md'
repository = "https://git.lecygnenoir.info/LecygneNoir/prismedia"
homepage = "https://git.lecygnenoir.info/LecygneNoir/prismedia"

keywords = ['peertube', 'youtube', 'prismedia']

[tool.poetry.dependencies]
python = ">=3.5"
configparser = "^3.7.1"
docopt = "^0.6.2"
future = "^0.17.1"
google-api-python-client = "^1.7.6"
google-auth = "^1.6.1"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.2.0"
httplib2 = "^0.12.1"
oauthlib = "^2.1.0"
python-magic = "^0.4.15"
python-magic-bin = { version = "^0.4.14", markers = "platform_system == 'Windows'" }
requests = "^2.18.4"
requests-oauthlib = "^0.8.0"
requests-toolbelt = "^0.9.1"
schema = "^0.6.8"
tzlocal = "^1.5.1"
Unidecode = "^1.0.23"
uritemplate = "^3.0.0"
urllib3 = "^1.22"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
prismedia = 'prismedia.upload:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

